Versão final da generalização e primeiras daos