@@ -1,62 +1,65 @@
 package br.cefetmg.lagos.model.dao;
 
-import br.cefetmg.lagos.model.dao.connections.ConnectionManager;
 import br.cefetmg.lagos.model.dao.exceptions.PersistenceException;
+import br.cefetmg.lagos.model.dao.util.DAO;
 import br.cefetmg.lagos.model.dao.util.StringSql;
-import br.cefetmg.lagos.model.dto.DTO;
+import br.cefetmg.lagos.model.dao.util.StringSqlDaoHelper;
 import br.cefetmg.lagos.model.dto.Pessoa;
 import br.cefetmg.lagos.model.dto.Usuario;
+import br.cefetmg.lagos.model.dto.enums.TipoUsuario;
 
-import java.sql.Connection;
-import java.sql.PreparedStatement;
-import java.sql.ResultSet;
-import java.util.ArrayList;
+import java.sql.Date;
 import java.util.Arrays;
 import java.util.List;
 
-public class UsuarioDAO extends DAO implements IUsuarioDAO {
-    private final IPessoaDAO pessoaDAO;
+public class UsuarioDAO implements IUsuarioDAO {
+    private static final DAO dao;
+    private static final PessoaDAO pessoaDAO;
 
-    public UsuarioDAO() {
-        super();
+    static {
+        dao = new DAO(Usuario.class);
         pessoaDAO = new PessoaDAO();
     }
 
-    @Override
-    protected String getTable() {
+    protected static String getTable() {
         return "usuario";
     }
 
-    @Override
-    protected Class<? extends DTO> getDTO() {
-        return Usuario.class;
-    }
-
-    @Override
-    protected List<String> getColumnsInsert() {
-        return Arrays.asList("tipo", "username", "senha", "pk");
-    }
-
+    /**
+     * A pessoa referente ao usuário não deve existir antes de cria-lo, nesse caso haverá uma duplicata no banco de dados
+     */
     @Override
     public Long inserir(Usuario usuario) throws PersistenceException {
         Long id = pessoaDAO.inserir(usuario);
-        if (id != null)
-            usuario.setId(id);
-        return super.inserir(usuario);
-    }
 
-    protected List<String> getColumnsUpdateSet() {
-        return Arrays.asList("tipo", "username", "senha");
-    }
+        usuario.setId(id);
 
-    protected List<String> getColumnsWhere() {
-        return List.of("pk");
+        List<List<String>> columnsPreparedStatement = Arrays.asList(
+                Arrays.asList("tipo", "username", "senha", "pk")
+        );
+
+        List<String> columns = dao.mergeLists(columnsPreparedStatement.toArray(new List[0]));
+
+        String sql = StringSqlDaoHelper.insertWithValues(getTable(), columnsPreparedStatement.get(0));
+
+        dao.inserir(usuario, sql, columns);
+        return id;
     }
 
     @Override
     public boolean alterar(Usuario usuario) throws PersistenceException {
         pessoaDAO.alterar(usuario);
-        return super.alterar(usuario);
+
+        List<List<String>> columnsPreparedStatement = Arrays.asList(
+                Arrays.asList("tipo", "username", "senha"),
+                List.of("pk")
+        );
+
+        List<String> columns = dao.mergeLists(columnsPreparedStatement.toArray(new List[0]));
+
+        String sql = StringSqlDaoHelper.updateSetWhereEq(getTable(), columnsPreparedStatement.get(0), columnsPreparedStatement.get(1));
+
+        return dao.alterar(usuario, sql, columns);
     }
 
     @Override
@@ -65,103 +68,37 @@ public class UsuarioDAO extends DAO implements IUsuarioDAO {
     }
 
     @Override
-    protected List<String> getColumnsOrderBy() {
-        return List.of("(" + StringSql.bigStatement(StringSql.select(Arrays.asList("nome", "sobrenome")),
-                StringSql.from("pessoa")) + ")");
-    }
-
-    @Override
-    protected List<String> getColumnsSelect() {
-        return Arrays.asList("tipo", "username", "senha", "pk", "nome", "sobrenome", "nascimento", "email", "telefone");
-    }
-
-    @Override
-    protected String getSelectStatement(List<String> columnsSelect) {
-        return StringSql.select(columnsSelect);
-    }
-
-    @Override
-    protected String getFromStatement() {
-        return StringSql.from(Arrays.asList(getTable(), "pessoas"));
-    }
-
-    @Override
     public List<Usuario> listar() throws PersistenceException {
-        return (List<Usuario>) super.listar();
-    }
+        List<List<String>> columnsResultSet = Arrays.asList(
+                Arrays.asList("nome", "sobrenome", "nascimento", "email", "telefone", "tipo", "username", "senha", "pk")
+        );
 
-    @Override
-    public Pessoa cosultarPorId(Long id) throws PersistenceException {
-        Pessoa pessoa = new Pessoa();
-        pessoa.setId(id);
-        return (Pessoa) super.cosultarPorId(id, pessoa);
-    }
-    // ..
+        List<String> allColumnsResultSet = dao.mergeLists(columnsResultSet.toArray(new List[0]));
 
-    @Override
-    public List<Usuario> listar() throws PersistenceException {
-        try {
-            Connection connection = ConnectionManager.getInstance().getConnection();
-            List<String> columnsOrderBy = Arrays.asList(StringSql.bigStatement(
-                    StringSql.select(List.of("nome", "sobrenome")), StringSql.from("pessoa")
-            ));
+        String sql = StringSqlDaoHelper.selectFromWhereOrderBy(Arrays.asList("nome", "sobrenome", "nascimento", "email",
+                        "telefone", "tipo", "username", "senha", "usuario.pk"), Arrays.asList(getTable(), "pessoa"),
+                Arrays.asList("pessoa.pk = usuario.pk"), Arrays.asList("nome", "sobrenome"));
 
-            String sql = StringSql.bigStatement(StringSql.selectAll(), StringSql.from(getTable()),
-                    StringSql.orderBy(columnsOrderBy));
-
-            PreparedStatement preparedStatement = connection.prepareStatement(sql);
-            ResultSet resultSet = preparedStatement.executeQuery();
-
-            ArrayList<Usuario> usuarios = null;
-            if (resultSet.next()) {
-                usuarios = new ArrayList<>();
-                do {
-                    Usuario usuario = (Usuario) getWithValues(resultSet, getAllColumns());
-                    usuario.set
-                    usuarios.add((Usuario) getWithValues(resultSet, getAllColumns()));
-                    usuarios.
-                } while (resultSet.next());
-            }
-
-            resultSet.close();
-            preparedStatement.close();
-            connection.close();
-
-            return usuarios;
-        } catch (Exception e) {
-            throw handleExeption(e);
-        }
+        return (List<Usuario>) dao.listar(sql, allColumnsResultSet);
     }
 
     @Override
     public Usuario cosultarPorId(Long id) throws PersistenceException {
-        try {
-            Connection connection = ConnectionManager.getInstance().getConnection();
-            List<String> columnsWhere = List.of("pk");
+        List<List<String>> columnsPreparedStatement = Arrays.asList(
+                List.of("pk")
+        );
 
-            String sql = StringSql.bigStatement(StringSql.selectAll(), StringSql.from(getTable()),
-                    StringSql.whereEq(columnsWhere));
+        List<List<String>> columnsResultSet = Arrays.asList(
+                Arrays.asList("nome", "sobrenome", "nascimento", "email", "telefone", "tipo", "username", "senha", "pk")
+        );
 
-            PreparedStatement preparedStatement = connection.prepareStatement(sql);
+        List<String> allColumnsPreparedStatement = dao.mergeLists(columnsPreparedStatement.toArray(new List[0]));
+        List<String> allColumnsResultSet = dao.mergeLists(columnsResultSet.toArray(new List[0]));
 
-            Pessoa pessoa = new Pessoa();
-            pessoa.setId(id);
-            setStatementValuesFor(pessoa, preparedStatement, columnsWhere);
+        String sql = StringSqlDaoHelper.selectFromWhere(
+                Arrays.asList("nome", "sobrenome", "nascimento", "email", "telefone", "tipo", "username", "senha", "usuario.pk"),
+                Arrays.asList(getTable(), "pessoa"), Arrays.asList("usuario.pk = ?", "pessoa.pk = usuario.pk"));
 
-            ResultSet resultSet = preparedStatement.executeQuery();
-
-            if (resultSet.next())
-                insertValues(pessoa, resultSet, getAllColumns());
-            else
-                pessoa = null;
-
-            resultSet.close();
-            preparedStatement.close();
-            connection.close();
-
-            return pessoa;
-        } catch (Exception e) {
-            throw handleExeption(e);
-        }
+        return (Usuario) dao.consultarPorId(id, sql, allColumnsPreparedStatement, allColumnsResultSet);
     }
 }
